--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,8 @@ defaults:
       type: "posts" # previously `post` in Jekyll 2.2.
     values:
       layout: "post"
+
+title: Usecue web development
+description: Website ontwikkeling, development en hosting
+canonical_url: https://usecue.nl
+twitter: jhvanderschee
