--- a/_config.yml
+++ b/_config.yml
@@ -13,5 +13,5 @@ defaults:
 
 title: Usecue web development
 description: Website ontwikkeling, development en hosting
-canonical_url: https://www.usecue.nl
+url: https://www.usecue.nl
 twitter: jhvanderschee
