--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title: Usecue web development
 description: Website ontwikkeling, development en hosting
 url: https://www.usecue.nl
 twitter: jhvanderschee
-permalinks: pretty
+permalinks: /blog/:title/
 
 collections:
   portfolio:
